--- a/mobile/ShareBook.Mobile/ShareBook.Mobile/AppShell.xaml
+++ b/mobile/ShareBook.Mobile/ShareBook.Mobile/AppShell.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ShareBook.Mobile"
+    xmlns:pages="clr-namespace:ShareBook.Mobile.Pages"
     Shell.FlyoutBehavior="Disabled"
     Title="ShareBook.Mobile">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate pages:Login}"
         Route="MainPage" />
 
 </Shell>
