--- a/mobile/ShareBook.Mobile/ShareBook.Mobile/AppShell.xaml
+++ b/mobile/ShareBook.Mobile/ShareBook.Mobile/AppShell.xaml
@@ -3,14 +3,13 @@
     x:Class="ShareBook.Mobile.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:ShareBook.Mobile"
-    xmlns:pages="clr-namespace:ShareBook.Mobile.Pages"
+    xmlns:mobile="clr-namespace:ShareBook.Mobile"
     Shell.FlyoutBehavior="Disabled"
     Title="ShareBook.Mobile">
-
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate pages:Login}"
-        Route="MainPage" />
-
+    <TabBar>
+        <Tab>
+            <ShellContent Route="MainPage"
+                    ContentTemplate="{DataTemplate mobile:MainPage}"/>
+        </Tab>
+    </TabBar>
 </Shell>
